--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://spatula-recipes.netlify.app/favicon.ico" />
+		<link
+			rel="icon"
+			href="https://spatula-recipes.netlify.app/favicon.ico?v=2"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
